# purescript-bridge

./: .envrc  .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  README.md  cabal.project  development.md  flake.nix  hie.yaml  purescript-bridge.cabal  spago.dhall  stack-8.0.yaml  stack.yaml
.github/workflows/: ci.yml  haskell.yml  nix-flake.yml  purescript.yml
example/: CHANGELOG.md  example.cabal  packages.dhall  readme.md  spago.dhall  spago.yaml
example/app/: GeneratePurescript.hs  Main.hs
example/src/: ArgonautTypes.hs  JsonHelpersTypes.hs  Main.purs  MyLib.hs  Types.hs  Types.purs
example/src/Argonaut/: Types.purs
example/src/JsonHelpers/: Types.purs
example/static/: index.html
example/test/: Main.purs
src/Language/PureScript/: Bridge.hs
src/Language/PureScript/Bridge/: Builder.hs  CodeGenSwitches.hs  PSTypes.hs  Primitives.hs  Printer.hs  SumType.hs  Tuple.hs  TypeInfo.hs  TypeParameters.hs
test/: Spec.hs  TestData.hs  readme.md
test/RoundTrip/: Spec.hs  Types.hs
test/RoundTrip/app/: packages.dhall  spago.dhall
test/RoundTrip/app/src/: Main.purs
test/RoundTrip/app/src/RoundTrip/: Types.purs
test/RoundTripArgonautAesonGeneric/: Spec.hs  Types.hs
test/RoundTripArgonautAesonGeneric/app/: packages.dhall  spago.dhall  spago.yaml
test/RoundTripArgonautAesonGeneric/app/src/: Main.purs
test/RoundTripArgonautAesonGeneric/app/src/RoundTripArgonautAesonGeneric/: Types.purs
test/RoundTripJsonHelpers/: Spec.hs  Types.hs
test/RoundTripJsonHelpers/app/: packages.dhall  spago.dhall  spago.yaml
test/RoundTripJsonHelpers/app/src/: Main.purs
test/RoundTripJsonHelpers/app/src/RoundTripJsonHelpers/: Types.purs
