name:                purescript-bridge
version:             0.16.0.0
synopsis:            Generate PureScript data types from Haskell data types
license:             BSD3
license-file:        LICENSE
author:              Robert Klotzner
maintainer:          robert . klotzner A T gmx . at
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/eskimor/purescript-bridge.git

library
  exposed-modules: Language.PureScript.Bridge
                , Language.PureScript.Bridge.Builder
                , Language.PureScript.Bridge.Primitives
                , Language.PureScript.Bridge.Printer
                , Language.PureScript.Bridge.PSTypes
                , Language.PureScript.Bridge.SumType
                , Language.PureScript.Bridge.Tuple
                , Language.PureScript.Bridge.TypeInfo
                , Language.PureScript.Bridge.TypeParameters
  build-depends:       base >=4.8 && < 6.0
                     , containers
                     , directory
                     , filepath
                     , mtl
                     , lens
                     , text
                     , transformers
                     , wl-pprint-text
                     , generic-deriving
  ghc-options:       -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite tests
  type:          exitcode-stdio-1.0
  main-is:       Spec.hs
  other-modules: TestData
               , RoundTrip.Spec
               , RoundTrip.Types
  build-depends: aeson
               , bytestring
               , HUnit
               , base
               , containers
               , directory
               , hspec >= 2.10
               , hspec-expectations-pretty-diff
               , process
               , purescript-bridge
               , QuickCheck
               , text
               , utf8-string
               , wl-pprint-text

  hs-source-dirs:   test
  default-language: Haskell2010
